--- a/frontend/package.json
+++ b/frontend/package.json
@@ -84,7 +84,7 @@
 		"build": "craco build",
 		"test": "craco test",
 		"eject": "react-scripts eject",
-		"lint": "prettier --check --write 'src/**/*.{ts,tsx,scss}' && yarn lint:es && stylelint \"**/*.scss\"",
+		"lint": "yarn lint:es && stylelint \"**/*.scss\"",
 		"lint:es": "eslint --fix \"src/**/*.{ts,tsx}\"",
 		"lint:css": "stylelint \"**/*.scss\" --fix",
 		"analyze": "source-map-explorer 'build/static/js/*.js'",
@@ -142,7 +142,6 @@
 		"craco-antd": "^1.19.0",
 		"eslint": "^7.0.0",
 		"eslint-config-prettier": "^7.2.0",
-		"eslint-plugin-prettier": "^3.3.1",
 		"eslint-plugin-react": "^7.22.0",
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"eslint-plugin-unused-imports": "^1.1.2",
@@ -151,10 +150,8 @@
 		"react-scripts": "4.0.3",
 		"sass": "^1.50.1",
 		"stylelint": "^14.9.1",
-		"stylelint-config-prettier": "^9.0.3",
 		"stylelint-config-sass-guidelines": "^9.0.1",
 		"stylelint-config-standard": "^26.0.0",
-		"stylelint-prettier": "^2.0.0",
 		"typed-scss-modules": "^3.4.0",
 		"typescript": "^4.7.4"
 	},
