update tsconfig to support import.meta

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -31,5 +31,5 @@
             "@lottie/*": ["./lottie/*"]
         }
     },
-    "include": ["./src"]
+    "exclude": ["**/node_modules/**", "**/build/**"]
 }
