--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,23 +1,33 @@
 {
-	"extends": "./tsconfig.paths.json",
-	"compilerOptions": {
-		"target": "es5",
-		"lib": ["dom", "es2019", "dom.iterable", "esnext"],
-		"skipLibCheck": true,
-		"esModuleInterop": true,
-		"allowSyntheticDefaultImports": true,
-		"strict": true,
-		"forceConsistentCasingInFileNames": true,
-		"module": "esnext",
-		"moduleResolution": "node",
-		"resolveJsonModule": true,
-		"isolatedModules": true,
-		"downlevelIteration": true,
-		"noEmit": true,
-		"jsx": "react-jsx",
-		"allowJs": true,
-		"typeRoots": ["./node_modules/@types", "./src/@types"],
-		"noFallthroughCasesInSwitch": true
-	},
-	"include": ["./src"]
+  "extends": "./tsconfig.paths.json",
+  "compilerOptions": {
+    "target": "es5",
+    "lib": [
+      "dom",
+      "es2019",
+      "dom.iterable",
+      "esnext"
+    ],
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "downlevelIteration": true,
+    "noEmit": true,
+    "jsx": "react-jsx",
+    "allowJs": true,
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/@types"
+    ],
+    "noFallthroughCasesInSwitch": true
+  },
+  "include": [
+    "./src"
+  ]
 }
