add prettier deps
a missing part of the prettier migration

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 	"devDependencies": {
 		"@types/node": "^18.7.14",
 		"chalk": "^5.0.1",
-		"hygen": "^6.2.7"
+		"hygen": "^6.2.7",
+		"prettier": "^2.7.1",
+		"pretty-quick": "^3.1.3"
 	}
 }
