Fix prettier and husky deps (#3003)

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"concurrently": "^6.5.1"
 	},
 	"scripts": {
-		"frontend:start": "concurrently -n frontend:build,frontend:gql,frontend:styles,client:build,client:gql,client:lint,firstload:build 'cd frontend && yarn start' 'cd frontend && yarn gql' 'cd frontend && yarn styles' 'cd client && yarn dev' 'cd client && yarn gql' 'cd client && yarn lint-watch' 'cd firstload && yarn dev'",
+		"prepare": "husky install",
+		"frontend:start": "concurrently -n frontend:start,frontend:gql,frontend:styles,client:dev,client:gql,firstload:dev 'cd frontend && yarn start' 'cd frontend && yarn gql' 'cd frontend && yarn styles' 'cd client && yarn dev' 'cd client && yarn gql' 'cd firstload && yarn dev'",
 		"frontend:install": "concurrently 'cd frontend && yarn' 'cd client && yarn' 'cd firstload && yarn'",
 		"generate": "hygen",
 		"g": "hygen",
@@ -18,6 +19,9 @@
 	"devDependencies": {
 		"@types/node": "^18.7.14",
 		"chalk": "^5.0.1",
-		"hygen": "^6.2.7"
+		"husky": "^8.0.1",
+		"hygen": "^6.2.7",
+		"prettier": "^2.7.1",
+		"pretty-quick": "^3.1.3"
 	}
 }
