--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
 		"@types/react-virtualized-auto-sizer": "^1.0.1",
 		"antd": "^4.17.0",
 		"apollo3-cache-persist": "^0.14.0",
-		"classnames": "^2.2.6",
+		"classnames": "^2.3.1",
 		"color-hash": "^2.0.1",
 		"dinero.js": "^2.0.0-alpha.8",
 		"eslint-plugin-simple-import-sort": "^7.0.0",
@@ -78,17 +78,20 @@
 	},
 	"scripts": {
 		"start": "HTTPS=true doppler run -- craco start",
-		"styles": "tsm src -w --logLevel=error",
+		"styles": "run-p --print-label --race styles:*",
+		"styles:tsm": "tsm src -w --logLevel=error",
+		"styles:tailwind": "yarn tailwind --watch",
 		"gql": "graphql-codegen --config --watch codegen.yml",
 		"gql:nowatch": "graphql-codegen --config codegen.yml",
-		"build": "craco build",
+		"build": "yarn tailwind --minify && craco build",
 		"test": "craco test",
 		"eject": "react-scripts eject",
 		"lint": "yarn lint:es && stylelint \"**/*.scss\"",
 		"lint:es": "eslint --fix \"src/**/*.{ts,tsx}\"",
 		"lint:css": "stylelint \"**/*.scss\" --fix",
 		"analyze": "source-map-explorer 'build/static/js/*.js'",
-		"svg": "svgr --typescript ./src/static --out-dir ./src/static --icon && yarn lint:es"
+		"svg": "svgr --typescript ./src/static --out-dir ./src/static --icon && yarn lint:es",
+		"tailwind": "tailwindcss -o src/style/tailwind.css"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -144,7 +147,9 @@
 		"eslint-config-prettier": "^7.2.0",
 		"eslint-plugin-react": "^7.22.0",
 		"eslint-plugin-react-hooks": "^4.2.0",
+		"eslint-plugin-tailwindcss": "^3.6.1",
 		"eslint-plugin-unused-imports": "^1.1.2",
+		"npm-run-all": "^4.1.5",
 		"postcss": "^8.3.3",
 		"postcss-custom-properties": "^12.1.7",
 		"prettier": "^2.7.1",
@@ -153,6 +158,7 @@
 		"stylelint": "^14.9.1",
 		"stylelint-config-sass-guidelines": "^9.0.1",
 		"stylelint-config-standard": "^26.0.0",
+		"tailwindcss": "^3.1.8",
 		"typed-scss-modules": "^3.4.0",
 		"typescript": "^4.7.4"
 	},
