--- a/frontend/package.json
+++ b/frontend/package.json
@@ -79,24 +79,18 @@
 	},
 	"scripts": {
 		"prepare": "patch-package",
-		"start": "HTTPS=true doppler run -- craco start",
-		"styles": "run-p --print-label --race styles:*",
-		"styles:tsm": "tsm src -w --logLevel=error",
-		"styles:tailwind": "yarn tailwind --watch",
-		"gql": "graphql-codegen --config --watch codegen.yml",
+		"dev": "doppler run -- run-p --print-label --race dev:*",
+		"dev:vite": "vite",
+		"dev:tsm": "tsm src -w --logLevel=error",
+		"dev:gql": "graphql-codegen --config --watch codegen.yml",
 		"gql:nowatch": "graphql-codegen --config codegen.yml",
-		"build": "yarn tailwind --minify && craco build",
-		"test": "craco test",
-		"eject": "react-scripts eject",
+		"build": "vite build",
+		"test": "vitest",
 		"lint": "yarn lint:es && stylelint \"**/*.scss\"",
 		"lint:es": "eslint --fix \"src/**/*.{ts,tsx}\"",
 		"lint:css": "stylelint \"**/*.scss\" --fix",
 		"analyze": "source-map-explorer 'build/static/js/*.js'",
-		"svg": "svgr --typescript ./src/static --out-dir ./src/static --icon && yarn lint:es",
-		"tailwind": "tailwindcss -o src/style/tailwind.css"
-	},
-	"eslintConfig": {
-		"extends": "react-app"
+		"svg": "svgr --typescript ./src/static --out-dir ./src/static --icon && yarn lint:es"
 	},
 	"browserslist": {
 		"production": [
@@ -111,7 +105,6 @@
 		]
 	},
 	"devDependencies": {
-		"@craco/craco": "^6.4.5",
 		"@graphql-codegen/cli": "^1.20.1",
 		"@graphql-codegen/import-types-preset": "^1.18.1",
 		"@graphql-codegen/named-operations-object": "^2.1.0",
@@ -144,7 +137,7 @@
 		"@types/validator": "^13.1.3",
 		"@typescript-eslint/eslint-plugin": "^5.30.6",
 		"@typescript-eslint/parser": "^5.30.6",
-		"craco-antd": "^1.19.0",
+		"@vitejs/plugin-react": "^2.0.1",
 		"eslint": "^7.0.0",
 		"eslint-config-prettier": "^7.2.0",
 		"eslint-plugin-react": "^7.22.0",
@@ -155,14 +148,17 @@
 		"postcss": "^8.3.3",
 		"postcss-custom-properties": "^12.1.7",
 		"prettier": "^2.7.1",
-		"react-scripts": "4.0.3",
 		"sass": "^1.50.1",
 		"stylelint": "^14.9.1",
 		"stylelint-config-sass-guidelines": "^9.0.1",
 		"stylelint-config-standard": "^26.0.0",
 		"tailwindcss": "^3.1.8",
 		"typed-scss-modules": "^3.4.0",
-		"typescript": "^4.8.2"
+		"typescript": "^4.8.2",
+		"vite": "^3.0.9",
+		"vite-plugin-svgr": "^2.2.1",
+		"vite-tsconfig-paths": "^3.5.0",
+		"vitest": "^0.22.1"
 	},
 	"resolutions": {
 		"**/postcss-custom-properties": "^12.1.7",
