--- a/frontend/package.json
+++ b/frontend/package.json
@@ -144,6 +144,7 @@
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"eslint-plugin-tailwindcss": "^3.6.1",
 		"eslint-plugin-unused-imports": "^1.1.2",
+		"happy-dom": "^6.0.4",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.3.3",
 		"postcss-custom-properties": "^12.1.7",
