--- a/frontend/package.json
+++ b/frontend/package.json
@@ -146,11 +146,12 @@
 		"eslint-plugin-tailwindcss": "^3.6.1",
 		"eslint-plugin-unused-imports": "^1.1.2",
 		"happy-dom": "^6.0.4",
+		"less": "^4.1.3",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.3.3",
 		"postcss-custom-properties": "^12.1.7",
 		"prettier": "^2.7.1",
-		"sass": "^1.50.1",
+		"sass": "^1.54.8",
 		"stylelint": "^14.9.1",
 		"stylelint-config-sass-guidelines": "^9.0.1",
 		"stylelint-config-standard": "^26.0.0",
