--- a/frontend/package.json
+++ b/frontend/package.json
@@ -159,6 +159,7 @@
 		"typed-scss-modules": "^3.4.0",
 		"typescript": "^4.8.2",
 		"vite": "^3.0.9",
+		"vite-plugin-imp": "^2.3.0",
 		"vite-plugin-svgr": "^2.2.1",
 		"vite-tsconfig-paths": "^3.5.0",
 		"vitest": "^0.22.1"
