--- a/frontend/package.json
+++ b/frontend/package.json
@@ -138,6 +138,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.30.6",
 		"@typescript-eslint/parser": "^5.30.6",
 		"@vitejs/plugin-react": "^2.0.1",
+		"autoprefixer": "^10.4.8",
 		"eslint": "^7.0.0",
 		"eslint-config-prettier": "^7.2.0",
 		"eslint-plugin-react": "^7.22.0",
@@ -146,7 +147,7 @@
 		"eslint-plugin-unused-imports": "^1.1.2",
 		"happy-dom": "^6.0.4",
 		"npm-run-all": "^4.1.5",
-		"postcss": "^8.3.3",
+		"postcss": "^8.4.16",
 		"postcss-custom-properties": "^12.1.7",
 		"prettier": "^2.7.1",
 		"sass": "^1.50.1",
