--- a/frontend/package.json
+++ b/frontend/package.json
@@ -138,6 +138,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.30.6",
 		"@typescript-eslint/parser": "^5.30.6",
 		"@vitejs/plugin-react": "^2.0.1",
+		"autoprefixer": "^10.4.8",
 		"eslint": "^7.0.0",
 		"eslint-config-prettier": "^7.2.0",
 		"eslint-plugin-react": "^7.22.0",
@@ -145,11 +146,12 @@
 		"eslint-plugin-tailwindcss": "^3.6.1",
 		"eslint-plugin-unused-imports": "^1.1.2",
 		"happy-dom": "^6.0.4",
+		"less": "^4.1.3",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.3.3",
 		"postcss-custom-properties": "^12.1.7",
 		"prettier": "^2.7.1",
-		"sass": "^1.50.1",
+		"sass": "^1.54.8",
 		"stylelint": "^14.9.1",
 		"stylelint-config-sass-guidelines": "^9.0.1",
 		"stylelint-config-standard": "^26.0.0",
@@ -157,6 +159,7 @@
 		"typed-scss-modules": "^3.4.0",
 		"typescript": "^4.8.2",
 		"vite": "^3.0.9",
+		"vite-plugin-imp": "^2.3.0",
 		"vite-plugin-svgr": "^2.2.1",
 		"vite-tsconfig-paths": "^3.5.0",
 		"vitest": "^0.22.1"
