--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -51,6 +51,8 @@ jobs:
                   go-version-file: 'backend/go.mod'
             - name: Format
               run: if [ "$(gofmt -l -d ./backend | wc -l)" -gt 0 ]; then gofmt -l -d ./backend && exit 1; fi
+            - name: Check for GORM Debug
+              run: if [ "$(grep --exclude-dir migrations -rE 'DB.[\s\n]*Debug\(\)' ./backend | wc -l)" -gt 0 ]; then grep --exclude-dir migrations -rE 'DB.[\s\n]*Debug\(\)' ./backend && exit 1; fi
             - name: Run linter
               uses: golangci/golangci-lint-action@v3
               with:
