--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"dev:redis": "redis-server",
 		"generate": "hygen",
 		"g": "hygen",
-		"format": "prettier --write --ignore-unknown . \"!./data\""
+		"format": "prettier --write --ignore-unknown . \"!./data\"",
+		"format-check": "prettier --check --ignore-unknown . \"!./data\""
 	},
 	"devDependencies": {
 		"@types/node": "^18.7.14",
