--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	"devDependencies": {
 		"@types/node": "^18.7.14",
 		"chalk": "^5.0.1",
+		"cypress": "^10.7.0",
 		"husky": "^8.0.1",
 		"hygen": "^6.2.7",
 		"npm-run-all": "^4.1.5",
