--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
 		"dev:firstload": "cd firstload && yarn dev",
 		"dev:redis": "redis-server",
 		"generate": "hygen",
-		"g": "hygen",
+		"g": "yarn generate",
 		"format": "prettier --write --ignore-unknown . \"!./data\"",
-		"format-check": "prettier --check --ignore-unknown . \"!./data\""
+		"format-check": "prettier --check --ignore-unknown . \"!./data\"",
+		"cy:run": "cypress run",
+		"cy:run:chrome": "cypress run --headed --browser chrome"
 	},
 	"devDependencies": {
 		"@types/node": "^18.7.14",
