--- a/.github/workflows/deploy-render.yml
+++ b/.github/workflows/deploy-render.yml
@@ -4,14 +4,14 @@ on:
         branches:
             - 'master'
         paths:
-            - 'render/**'
+            - 'packages/render/**'
             - '.github/workflows/deploy-render.yml'
 jobs:
     deploy_render:
         runs-on: ubuntu-latest
         steps:
             - name: Check out the repo
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
             - name: Configure AWS credentials
               uses: aws-actions/configure-aws-credentials@v1
               with:
@@ -19,13 +19,14 @@ jobs:
                   aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
                   aws-region: us-east-2
             - name: Setup Node.js
-              uses: actions/setup-node@v2
+              uses: actions/setup-node@v3
               with:
                   node-version: 16.14.2
                   registry-url: https://registry.npmjs.org
-            - name: Build and push lambda
-              run: |
-                  cd render/
-                  yarn workspaces focus --production
-                  yarn run build
-                  yarn run publish
+                  cache: 'pnpm'
+            - name: Install dependencies
+              run: pnpm --filter render install --prod
+            - name: Build
+              run: pnpm --filter render build
+            - name: Push lambda
+              run: pnpm run publish
