--- a/.github/workflows/firstload.yml
+++ b/.github/workflows/firstload.yml
@@ -2,31 +2,30 @@ name: Firstload
 on:
     push:
         paths:
-            - 'firstload/**'
+            - 'packages/firstload/**'
             - '.github/workflows/firstload.yml'
 jobs:
     firstload:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
             - name: Setup Node.js
-              uses: actions/setup-node@v1
+              uses: actions/setup-node@v3
               with:
                   node-version: 16.14.2
                   registry-url: https://registry.npmjs.org
-            - name: Install main dependencies
-              run: cd firstload && yarn install
-            - name: Install other dependencies
-              run: cd client && yarn install
+                  cache: 'pnpm'
+            - name: Install dependencies
+              run: pnpm install
             # - name: Run tests
-            #   run: cd firstload && yarn test
+            #   run: pnpm --filter firstload test
             - name: Build Bundle
-              run: cd firstload && yarn build
+              run: pnpm --filter firstload build
             - name: Confirm new version
-              run: cd firstload && python3 ../scripts/compare.py -s firstload
+              run: cd packages/firstload && python3 ../../scripts/compare.py -s firstload
             - name: Publish
               if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/beta'
-              run: cd firstload && yarn publish --access public
+              run: pnpm --filter firstload publish --access public
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
