--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -5,7 +5,7 @@ on:
             - '**'
             - '!master'
         paths:
-            - 'frontend/**'
+            - 'packages/frontend/**'
             - '.github/workflows/frontend.yml'
 jobs:
     changes:
@@ -21,68 +21,45 @@ jobs:
               with:
                   filters: |
                       gql:
-                        - 'frontend/src/graph/operators/query.gql'
-                        - 'frontend/src/graph/operators/mutation.gql'
+                        - 'packages/frontend/src/graph/operators/query.gql'
+                        - 'packages/frontend/src/graph/operators/mutation.gql'
     generate-check:
         needs: [changes]
         if: needs.changes.outputs.gql == 'true'
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
             - name: Setup Node.js
-              uses: actions/setup-node@v2
+              uses: actions/setup-node@v3
               with:
                   node-version: 16.14.2
                   registry-url: https://registry.npmjs.org
-            - name: Get yarn cache directory path
-              id: yarn-cache-dir-path
-              run: echo "::set-output name=dir::$(yarn cache dir)"
-            - name: Cache
-              uses: actions/cache@v2.1.6
-              id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-              with:
-                  path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-                  key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-                  restore-keys: |
-                      ${{ runner.os }}-yarn-
-            - name: Install main dependencies
-              run: cd frontend && yarn --prefer-offline
+                  cache: 'pnpm'
+            - name: Install dependencies
+              run: pnpm install
             - name: copy frontend
               run: |
                   mkdir tmp
-                  cp -a frontend/. tmp/
+                  cp -a packages/frontend/. tmp/
             - name: Generate code
-              run: |
-                  cd frontend/
-                  yarn gql:nowatch
+              run: pnpm --filter frontend run gql:nowatch
             - name: Diff Check
-              run: |
-                  diff -r frontend/src/graph tmp/src/graph
+              run: diff -r packages/frontend/src/graph tmp/src/graph
     frontend:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
             - name: Setup Node.js
-              uses: actions/setup-node@v2
+              uses: actions/setup-node@v3
               with:
                   node-version: 16.14.2
                   registry-url: https://registry.npmjs.org
-            - name: Get yarn cache directory path
-              id: yarn-cache-dir-path
-              run: echo "::set-output name=dir::$(yarn cache dir)"
-            - name: Cache
-              uses: actions/cache@v2.1.6
-              id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-              with:
-                  path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-                  key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-                  restore-keys: |
-                      ${{ runner.os }}-yarn-
+                  cache: 'pnpm'
             - name: Install main dependencies
-              run: cd frontend && yarn --prefer-offline
+              run: pnpm --filter frontend --prefer-offline
             - name: Runs linting
-              run: cd frontend && yarn test
+              run: pnpm --filter frontend test
             - name: Build Bundle
-              run: export NODE_OPTIONS='--max-old-space-size=7168' && cd frontend && CI=false yarn build
+              run: export NODE_OPTIONS='--max-old-space-size=7168' && CI=false pnpm --filter frontend run build
