--- a/.github/workflows/highlight-next.yml
+++ b/.github/workflows/highlight-next.yml
@@ -2,31 +2,30 @@ name: highlight-run/next
 on:
     push:
         paths:
-            - 'highlight-next/**'
+            - 'packages/highlight-next/**'
             - '.github/workflows/highlight-next.yml'
 jobs:
     highlight-next:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
             - name: Setup Node.js
-              uses: actions/setup-node@v1
+              uses: actions/setup-node@v3
               with:
                   node-version: 16.14.0
                   registry-url: https://registry.npmjs.org
-            - name: Install main dependencies
-              run: cd highlight-next && yarn install
-            - name: Install other dependencies
-              run: cd client && yarn install
+                  cache: 'pnpm'
+            - name: Install dependencies
+              run: pnpm install
             # - name: Run tests
-            #   run: cd highlight-next && yarn test
+            #   run: pnpm --filter highlight-next test
             - name: Build Bundle
-              run: cd highlight-next && yarn build
+              run: pnpm --filter highlight-next run build
             - name: Confirm new version
-              run: cd highlight-next && python3 ../scripts/compare.py -s highlight-next
+              run: cd packages/highlight-next && python3 ../../scripts/compare.py -s highlight-next
             - name: Publish
               if: github.ref == 'refs/heads/master'
-              run: cd highlight-next && yarn publish --access public
+              run: pnpm --filter highlight-next publish --access public
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
