--- a/.github/workflows/highlight-next.yml
+++ b/.github/workflows/highlight-next.yml
@@ -16,6 +16,8 @@ jobs:
                   node-version: 16.14.0
                   registry-url: https://registry.npmjs.org
                   cache: 'pnpm'
+            - name: Install pnpm
+              run: npm install -g pnpm
             - name: Install dependencies
               run: pnpm install
             # - name: Run tests
