--- a/amplify.yml
+++ b/amplify.yml
@@ -5,6 +5,7 @@ applications:
           phases:
               preBuild:
                   commands:
+                      - npm install -g pnpm
                       - pnpm install
               build:
                   commands:
