--- a/.github/workflows/sourcemap-uploader.yml
+++ b/.github/workflows/sourcemap-uploader.yml
@@ -15,6 +15,8 @@ jobs:
               with:
                   node-version: 16.14.2
                   registry-url: https://registry.npmjs.org
+            - name: Install pnpm
+              run: npm install -g pnpm
             - name: Install main dependencies
               run: pnpm install
             - name: Confirm new version
