--- a/.github/workflows/sourcemap-uploader.yml
+++ b/.github/workflows/sourcemap-uploader.yml
@@ -9,14 +9,16 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
+            - uses: pnpm/action-setup@v2
+              with:
+                  version: 7.11.0
             - name: Setup Node.js
-              uses: actions/setup-node@v1
+              uses: actions/setup-node@v3
               with:
                   node-version: 16.14.2
                   registry-url: https://registry.npmjs.org
-            - name: Install pnpm
-              run: npm install -g pnpm
+                  cache: 'pnpm'
             - name: Install main dependencies
               run: pnpm install
             - name: Confirm new version
