more workflow fixes

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -54,13 +54,16 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v3
+            - uses: pnpm/action-setup@v2
+              with:
+                  version: 7.11.0
             - name: Setup Node.js
               uses: actions/setup-node@v3
               with:
                   node-version: 16.14.2
                   registry-url: https://registry.npmjs.org
                   cache: 'pnpm'
-            - name: Install main dependencies
+            - name: Install dependencies
               run: pnpm --filter frontend --prefer-offline
             - name: Runs linting
               run: pnpm --filter frontend test
