update amplify config for pnpm again

--- a/amplify.yml
+++ b/amplify.yml
@@ -4,13 +4,13 @@ applications:
       frontend:
           phases:
               preBuild:
+                  # https://github.com/aws-amplify/amplify-cli/issues/6382#issuecomment-1145087901
                   commands:
-                      - npm install -g pnpm
-                      - pnpm install
+                      - npx pnpm install
               build:
                   commands:
                       - (curl -Ls https://cli.doppler.com/install.sh || wget -qO- https://cli.doppler.com/install.sh) | sh
-                      - doppler run -- pnpm run build
+                      - doppler run -- npx pnpm run build
           artifacts:
               baseDirectory: build
               files:
@@ -23,10 +23,10 @@ applications:
           phases:
               preBuild:
                   commands:
-                      - pnpm
+                      - npx pnpm install
               build:
                   commands:
-                      - pnpm build
+                      - npx pnpm build
           artifacts:
               baseDirectory: dist
               files:
