--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -22,6 +22,8 @@ jobs:
               with:
                   node-version: 16.14.2
                   registry-url: https://registry.npmjs.org
+            - name: Install Doppler CLI
+              uses: dopplerhq/cli-action@v1
             - name: Install main dependencies
               run: cd frontend && yarn
             - name: Run App
