--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -12,7 +12,7 @@ on:
 jobs:
     # TODO: Investigate creating custom dockerfile for testing. Could reuse main
     # Dockerfile and add cy:run command.
-    frontend:
+    test:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
@@ -26,17 +26,12 @@ jobs:
               uses: dopplerhq/cli-action@v1
             - name: Install main dependencies
               run: cd frontend && yarn
-            - name: Run App
-              run: cd frontend && CI=false yarn dev
-              env:
-                  DOPPLER_TOKEN: ${{ secrets.DOPPLER_TOKEN }}
-
-    test:
-        runs-on: ubuntu-latest
-        needs: frontend
-        steps:
             - name: Cypress install and run
               uses: cypress-io/github-action@v4
+              with:
+                  start: cd frontend && CI=false yarn dev
+              env:
+                  DOPPLER_TOKEN: ${{ secrets.DOPPLER_TOKEN }}
             - name: Save videos
               uses: actions/upload-artifact@v2
               with:
