--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -4,11 +4,11 @@ on:
         branches:
             - '**'
             - '!master'
-        paths:
-            - 'frontend/**'
-            - 'client/**'
-            - 'firstload/**'
-            - '.github/workflows/e2e-test.yml'
+        # paths:
+        #     - 'frontend/**'
+        #     - 'client/**'
+        #     - 'firstload/**'
+        #     - '.github/workflows/e2e-test.yml'
 jobs:
     # TODO: Investigate creating custom dockerfile for testing. Could reuse main
     # Dockerfile and add cy:run command.
@@ -29,8 +29,8 @@ jobs:
             - name: Cypress install and run
               uses: cypress-io/github-action@v4
               with:
-                  build: cd frontend && doppler run -- yarn build
-                  start: npx http-server ./frontend/build -p 3000
+                  build: yarn ci:build
+                  start: yarn ci:start
               env:
                   DOPPLER_TOKEN: ${{ secrets.DOPPLER_TOKEN }}
             - name: Save videos
