--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -28,6 +28,13 @@ jobs:
                     --health-retries 5
                 ports:
                     - 5432:5432
+            redis:
+                image: redis
+                options: >-
+                    --health-cmd "redis-cli ping"
+                    --health-interval 10s
+                    --health-timeout 5s
+                    --health-retries 5
         env:
             PSQL_HOST: 'localhost'
             PSQL_PORT: '5432'
