--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"g": "yarn generate",
 		"format": "prettier --write --ignore-unknown . \"!./data\"",
 		"format-check": "prettier --check --ignore-unknown . \"!./data\"",
+		"ci:start": "run-p --print-label --race dev:frontend dev:client dev:client-gql dev:firstload dev:backend",
 		"ci:test:e2e": "start-server-and-test dev https-get://localhost:3000 cy:run",
 		"cy:run": "cypress run",
 		"cy:run:chrome": "cypress run --headed --browser chrome"
@@ -35,7 +36,6 @@
 		"hygen": "^6.2.7",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^2.7.1",
-		"pretty-quick": "^3.1.3",
-		"start-server-and-test": "^1.14.0"
+		"pretty-quick": "^3.1.3"
 	}
 }
