--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -58,8 +58,8 @@ jobs:
                   go-version-file: 'backend/go.mod'
             - name: Install Doppler CLI
               uses: dopplerhq/cli-action@v1
-            - name: Clean frontend dependencies
-              run: yarn frontend:clean
+            - name: Clean Yarn cache
+              run: yarn cache clean
             - name: Install frontend dependencies
               run: yarn frontend:install
             - name: Cypress install and run
