install deps only for frontend

--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,7 @@ applications:
               preBuild:
                   # https://github.com/aws-amplify/amplify-cli/issues/6382#issuecomment-1145087901
                   commands:
-                      - npx pnpm install
+                      - npx pnpm -r --filter=frontend-ts... install
               build:
                   commands:
                       - (curl -Ls https://cli.doppler.com/install.sh || wget -qO- https://cli.doppler.com/install.sh) | sh
